# chris_create_navigation

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
env-hooks/: 25.create-basic-navigation.sh.em
launch/: amcl_chris_maze_sim.launch  amcl_creech_world.launch  amcl_demo.launch  amcl_empty.launch  amcl_game_world.launch  amcl_willow_sim.launch  create_maze_world.launch  fake_chris_maze.launch  fake_corridor_sim.launch  fake_navigation_demo.launch  fake_willow_sim.launch  gazebo_creech_world.launch  gazebo_game_world.launch  gmapping_demo.launch
launch/includes/: move_base.launch.xml  velocity_smoother.launch.xml
maps/: creech_map.py  game_map.pgm  game_map.py  game_map.yaml
param/: local_costmap_params.yaml
urdf/: blue_ball.urdf.xacro  green_ball.urdf.xacro  red_ball.urdf.xacro  simple_ball.urdf.xacro
worlds/: chris_maze.raf  chris_maze.world  game_map.world
